--- a/Fashion_MNIST/softmax.ipynb
+++ b/Fashion_MNIST/softmax.ipynb
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#model\n",
+    "# The model\n",
     "Y = tf.nn.softmax(tf.matmul(XX, W) + b)"
    ]
   },
