--- a/Fashion_MNIST/3CNN_withdropout.ipynb
+++ b/Fashion_MNIST/3CNN_withdropout.ipynb
@@ -16,6 +16,7 @@
    "source": [
     "import tensorflow as tf\n",
     "import math\n",
+    "import time\n",
     "print(tf.__version__)\n",
     "tf.set_random_seed(0)"
    ]
@@ -162,19 +163,21 @@
      "output_type": "stream",
      "text": [
       "step     0, train_accuracy = 13 % test_accuracy = 13.47 %\n",
-      "step  1000, train_accuracy = 83 % test_accuracy = 88.39 %\n",
-      "step  2000, train_accuracy = 91 % test_accuracy = 90.48 %\n",
-      "step  3000, train_accuracy = 98 % test_accuracy = 90.71 %\n",
-      "step  4000, train_accuracy = 90 % test_accuracy = 91.17 %\n",
-      "step  5000, train_accuracy = 95 % test_accuracy = 91.56 %\n",
-      "step  6000, train_accuracy = 99 % test_accuracy = 91.48 %\n",
-      "step  7000, train_accuracy = 90 % test_accuracy = 91.43 %\n",
-      "step  8000, train_accuracy = 96 % test_accuracy = 91.35 %\n",
-      "step  9000, train_accuracy = 99 % test_accuracy = 91.64 %\n"
+      "step  1000, train_accuracy = 82 % test_accuracy = 88.4 %\n",
+      "step  2000, train_accuracy = 92 % test_accuracy = 90.35 %\n",
+      "step  3000, train_accuracy = 96 % test_accuracy = 90.46 %\n",
+      "step  4000, train_accuracy = 92 % test_accuracy = 90.83 %\n",
+      "step  5000, train_accuracy = 96 % test_accuracy = 91.39 %\n",
+      "step  6000, train_accuracy = 98 % test_accuracy = 91.36 %\n",
+      "step  7000, train_accuracy = 91 % test_accuracy = 91.24 %\n",
+      "step  8000, train_accuracy = 97 % test_accuracy = 91.38 %\n",
+      "step  9000, train_accuracy = 99 % test_accuracy = 91.61 %\n",
+      "training time:  76.34775189999999  s\n"
      ]
     }
    ],
    "source": [
+    "start = time.clock()\n",
     "test_X, test_Y = mnist.test.next_batch(10000)\n",
     "for i in range(10000):\n",
     "    batch_X, batch_Y = mnist.train.next_batch(100)\n",
@@ -182,31 +185,15 @@
     "        train_accuracy = accuracy.eval(session=sess, feed_dict={X:batch_X, Y_:batch_Y, pkeep:1.0})\n",
     "        test_accuracy = accuracy.eval(session=sess, feed_dict={X:test_X, Y_:test_Y, pkeep:1.0})\n",
     "        print(\"step %5d, train_accuracy = %.4g %% test_accuracy = %.4g %%\" % (i, train_accuracy*100, test_accuracy*100))\n",
-    "    train_step.run(session=sess, feed_dict={X:batch_X, Y_:batch_Y, pkeep:0.75, step:i})"
+    "    train_step.run(session=sess, feed_dict={X:batch_X, Y_:batch_Y, pkeep:0.75, step:i})\n",
+    "print(\"training time: \", time.clock()-start, \" s\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step     0, train_accuracy = 13 % test_accuracy = 13.47 %\n",
-      "step  1000, train_accuracy = 81 % test_accuracy = 87.78 %\n",
-      "step  2000, train_accuracy = 95 % test_accuracy = 90.1 %\n",
-      "step  3000, train_accuracy = 96 % test_accuracy = 90.71 %\n",
-      "step  4000, train_accuracy = 86 % test_accuracy = 90.88 %\n",
-      "step  5000, train_accuracy = 94 % test_accuracy = 91.24 %\n",
-      "step  6000, train_accuracy = 96 % test_accuracy = 91.35 %\n",
-      "step  7000, train_accuracy = 88 % test_accuracy = 91.41 %\n",
-      "step  8000, train_accuracy = 94 % test_accuracy = 91.41 %\n",
-      "step  9000, train_accuracy = 97 % test_accuracy = 91.52 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# after restart kernel\n",
     "test_X, test_Y = mnist.test.next_batch(10000)\n",
