week 8 rnn_basic

--- a/Fashion_MNIST/1RNN_basic.ipynb
+++ b/Fashion_MNIST/1RNN_basic.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.12.0\n"
+      "1.10.0\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
    ],
    "source": [
     "import mnistdata\n",
-    "mnist = mnistdata.read_data_sets(\"data/mnist\", one_hot=True, reshape=False)"
+    "mnist = mnistdata.read_data_sets(\"data/fashion\", one_hot=True, reshape=False)"
    ]
   },
   {
@@ -77,17 +77,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From <ipython-input-5-7ea2a4b79fb9>:1: BasicRNNCell.__init__ (from tensorflow.python.ops.rnn_cell_impl) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "This class is equivalent as tf.keras.layers.SimpleRNNCell, and will be replaced by that in Tensorflow 2.0.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rnn_cell = tf.nn.rnn_cell.BasicRNNCell(128)\n",
     "outputs, states = tf.nn.dynamic_rnn(rnn_cell, X, dtype=tf.float32)\n",
@@ -117,28 +107,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step     0, train_accuracy = 81 % test_accuracy = 76.32 %\n",
-      "step   500, train_accuracy = 83 % test_accuracy = 86.55 %\n",
-      "step  1000, train_accuracy = 96 % test_accuracy = 90.46 %\n",
-      "step  1500, train_accuracy = 93 % test_accuracy = 91.94 %\n"
+      "step     0, train_accuracy = 15 % test_accuracy = 13.87 %\n",
+      "step  1000, train_accuracy = 88 % test_accuracy = 87.82 %\n",
+      "step  2000, train_accuracy = 90 % test_accuracy = 91.48 %\n",
+      "step  3000, train_accuracy = 95 % test_accuracy = 92.94 %\n",
+      "step  4000, train_accuracy = 95 % test_accuracy = 94.03 %\n",
+      "step  5000, train_accuracy = 93 % test_accuracy = 95.03 %\n",
+      "step  6000, train_accuracy = 96 % test_accuracy = 95.4 %\n",
+      "step  7000, train_accuracy = 96 % test_accuracy = 95.7 %\n",
+      "step  8000, train_accuracy = 93 % test_accuracy = 96.14 %\n",
+      "step  9000, train_accuracy = 98 % test_accuracy = 96.47 %\n",
+      "training time:  200.6926747  s\n"
      ]
     }
    ],
    "source": [
+    "# mnist\n",
     "start = time.clock()\n",
     "test_X, test_Y = mnist.test.next_batch(10000)\n",
     "test_X = test_X.reshape([10000, 28, 28])\n",
-    "for i in range(2000):\n",
+    "for i in range(10000):\n",
     "    batch_X, batch_Y = mnist.train.next_batch(100)\n",
     "    batch_X = batch_X.reshape([100, 28, 28])\n",
-    "    if i % 500 == 0:\n",
+    "    if i % 1000 == 0:\n",
+    "        train_accuracy = accuracy.eval(session=sess, feed_dict={X:batch_X, Y_:batch_Y})\n",
+    "        test_accuracy = accuracy.eval(session=sess, feed_dict={X:test_X, Y_:test_Y})\n",
+    "        print(\"step %5d, train_accuracy = %.4g %% test_accuracy = %.4g %%\" % (i, train_accuracy*100, test_accuracy*100))\n",
+    "    train_step.run(session=sess, feed_dict={X:batch_X, Y_:batch_Y})\n",
+    "print(\"training time: \", time.clock()-start, \" s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step     0, train_accuracy = 7 % test_accuracy = 8.19 %\n",
+      "step  1000, train_accuracy = 78 % test_accuracy = 76.24 %\n",
+      "step  2000, train_accuracy = 87 % test_accuracy = 79.16 %\n",
+      "step  3000, train_accuracy = 91 % test_accuracy = 80.65 %\n",
+      "step  4000, train_accuracy = 79 % test_accuracy = 82.35 %\n",
+      "step  5000, train_accuracy = 86 % test_accuracy = 82.41 %\n",
+      "step  6000, train_accuracy = 90 % test_accuracy = 83.01 %\n",
+      "step  7000, train_accuracy = 82 % test_accuracy = 84.04 %\n",
+      "step  8000, train_accuracy = 85 % test_accuracy = 83.6 %\n",
+      "step  9000, train_accuracy = 91 % test_accuracy = 84.08 %\n",
+      "training time:  200.5715953  s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fashion\n",
+    "start = time.clock()\n",
+    "test_X, test_Y = mnist.test.next_batch(10000)\n",
+    "test_X = test_X.reshape([10000, 28, 28])\n",
+    "for i in range(10000):\n",
+    "    batch_X, batch_Y = mnist.train.next_batch(100)\n",
+    "    batch_X = batch_X.reshape([100, 28, 28])\n",
+    "    if i % 1000 == 0:\n",
     "        train_accuracy = accuracy.eval(session=sess, feed_dict={X:batch_X, Y_:batch_Y})\n",
     "        test_accuracy = accuracy.eval(session=sess, feed_dict={X:test_X, Y_:test_Y})\n",
     "        print(\"step %5d, train_accuracy = %.4g %% test_accuracy = %.4g %%\" % (i, train_accuracy*100, test_accuracy*100))\n",
