--- a/Medical/train_word_vector.ipynb
+++ b/Medical/train_word_vector.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import tf_glove\n",
-    "model = tf_glove.GloVeModel(embedding_size=300, context_size=10)"
+    "model = tf_glove.GloVeModel(embedding_size=500, context_size=10)"
    ]
   },
   {
@@ -35,6 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# to train word2vec.npy\n",
     "corpus = []\n",
     "for i in range(len(data_list)):\n",
     "    fp = open(os.path.join('data', data_list[i]), 'r', encoding='utf-8')\n",
@@ -43,7 +44,50 @@
     "        line = line.split(' ')\n",
     "        line.remove('\\n')\n",
     "        corpus.append(line)\n",
-    "        for rep in range(4):\n",
+    "        for _ in range(4):\n",
+    "            line = fp.readline();\n",
+    "    fp.close"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to train word2vec_simple.npy\n",
+    "corpus = []\n",
+    "for i in range(len(data_list)):\n",
+    "    fp = open(os.path.join('data', data_list[i]), 'r', encoding='utf-8')\n",
+    "    line = fp.readline()\n",
+    "    line = fp.readline()\n",
+    "    while line:\n",
+    "        line = line.split(' ')\n",
+    "        line.remove('\\n')\n",
+    "        corpus.append(line)\n",
+    "        for _ in range(4):\n",
+    "            line = fp.readline();\n",
+    "    fp.close"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to train pos2vec.npy\n",
+    "corpus = []\n",
+    "for i in range(len(data_list)):\n",
+    "    fp = open(os.path.join('data', data_list[i]), 'r', encoding='utf-8')\n",
+    "    line = fp.readline()\n",
+    "    line = fp.readline()\n",
+    "    line = fp.readline()\n",
+    "    while line:\n",
+    "        line = line.split(' ')\n",
+    "        line.remove('\\n')\n",
+    "        corpus.append(line)\n",
+    "        for _ in range(4):\n",
     "            line = fp.readline();\n",
     "    fp.close"
    ]
